--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.2",
     "core-js": "^3.6.4",
     "node-sass": "^4.14.1",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.3.4"
   },
