--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vuejs-countdown": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
