--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "node-sass": "^4.14.1",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
