--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "node-sass": "^4.14.1",
     "prerender-spa-plugin": "^3.4.0",
+    "sitemap-webpack-plugin": "^0.8.1",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
